--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,28 +1,15 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <title>Django's Blog</title>
-</head>
-<body>
-    <div>
-        <h1><a href="/">Django's Blog App</a></h1>
-    </div>
+{% extends 'blog/base.html' %}
+{% block content_method %}
 
     {% for post in posts %}
-    <div>
-        <br>
-        <p>Published Date : {{post.published_date|date:"Y-m-d g:i a"}}</p>
-        <h2><a href="">{{post.title}}</a> </h2>
-        <p>{{post.text|linebreaksbr}}</p>
-    </div>
+        <div class="post">
+            <br>
+            <div class="date">
+                <p>Published Date : {{post.published_date|date:"Y-m-d g:i a"}}</p>
+            </div>
+            <h2><a href="{% url 'post_detail' pk=post.id %}">{{post.title}}</a> </h2>
+            <p>{{post.text|linebreaksbr}}</p>
+        </div>
     {% endfor %}
 
-    <div>
-        <br>
-        <p>Published Date : 2018-05-09 (cording)</p>
-        <h2><a href="">My Second title</a> </h2>
-        <p>Second Sample Text</p>
-    </div>
-</body>
-</html>
+{% endblock %}
