--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,7 +10,11 @@
     <link rel="stylesheet" href="{% static 'css/blog.css' %}" >
 </head>
 <body>
+
     <div class="page-header">
+        <a href="{% url 'post_new' %}" class="top-menu">
+            <span class="glyphicon glyphicon-plus"></span>
+        </a>
         <h1><a href="/">Django's Blog App</a></h1>
     </div>
 
