새글 등록 모듈 추가 Postgres 연동 모듈 추가

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -31,11 +31,11 @@
         </div>
     </div>
 
-    <div>
-        <br>
-        <p>Published Date : 2018-05-09 (cording)</p>
-        <h2><a href="">My Second title</a> </h2>
-        <p>Second Sample Text</p>
-    </div>
+    <!--<div>-->
+        <!--<br>-->
+        <!--<p>Published Date : 2018-05-09 (cording)</p>-->
+        <!--<h2><a href="">My Second title</a> </h2>-->
+        <!--<p>Second Sample Text</p>-->
+    <!--</div>-->
 </body>
 </html>
