--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -21,3 +21,7 @@ margin-right: 20px;
 }
 .post { margin-bottom: 70px; }
 .post h1 a, .post h1 a:visited { color: #000000; }
+
+.comment {
+margin: 20px 0px 20px 20px;
+}
